[package]
name = "aquatyping"
version = "0.1.0"
authors = ["kizitorashiro <kizitora.shiro@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.8"
rusttype = "0.9.2"
tempfile = "3.1.0"
serde = { version = "1.0.115", features = ["derive"] }
serde_json = "*"
rand = "0.7.3"
crossbeam-channel = "0.4.3"
# tuikit = "0.3.3"
# rustbox = "*"
termion = "*"



